       status, only values of the actual configuration options, a.k.a.
       'requested' configuration.  The interface configuration status,
       a.k.a. 'configured' values, can be found in the 'status' column of
       the Interface table, i.e. with 'ovs-vsctl get interface <..> status'.
       Reported names adjusted accordingly.


v3.2.0 - 17 Aug 2023
--------------------
   - OVSDB:
     * Changed format in which ovsdb schema conversion operations are stored in
       clustered database files.  Such operations are now allowed to contain
       the bare schema (without data).  This allows to significantly improve
       the schema conversion performance.
       New ovsdb-server process will be able to read old database format, but
       old processes will *fail* to read database created by the new one, if
       conversion operation is present.  For the cluster service model follow
       upgrade instructions in 'Upgrading from version 3.1 and earlier to 3.2
       and later' section of ovsdb(7).
     * When ovsdb-server is running in relay mode, the probe interval is
       now configurable via 'ovsdb-server/set-relay-source-probe-interval'
       unixctl command.
   - IPFIX template and statistics intervals can now be configured through two
     new options in the IPFIX table: 'template_interval' and 'stats_interval'.
   - Linux kernel datapath:
     * OVS now collects per-interface upcall statistics that can be obtained
       via 'ovs-appctl dpctl/show -s' or the interface's statistics column
       in OVSDB.  Available with upstream kernel 6.2+.
   - OVS route table in userspace now takes into account preferred source
     address from cached kernel routes.
   - ovs-appctl:
     * Add support for selecting the source address with the
       'ovs-appctl ovs/route/add' command.
     * New commands "dpctl/{ct-get-sweep-interval,ct-set-sweep-interval}" that
       allow to get and set, for the userspace datapath, the sweep interval